# coding-policy-prompt-generator

./: CHANGELOG.md  CHANGELOG_ja.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  README.md  README_ja.md  SECURITY.md  SECURITY_ja.md  pyproject.toml  spec.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: 20260128impliment-plan.md  20260128tanakahdk-update-template-plan.md  20260128update-template-plan.md  20260427python-310-v0.2.0-plan.md
docs/ai-auditor-format/: 20260121AIオーディター形式サンプルコーディング規約_with_prompts.xlsx
docs/assets/: 20260128example.key  example.key
src/coding_policy_prompt_generator/: __init__.py  cli.py  excel_io.py
src/coding_policy_prompt_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/coding_policy_prompt_generator/templates/: system_prompt.j2  user_prompt.j2
tests/: test_basic_functionality.py  test_column_resolution.py  test_m1_smoke.py  test_sheet_name_stability.py  test_skip_and_nfc.py  test_template_and_dry_run.py
