[project]
name = "coding-policy-prompt-generator"
version = "0.2.0"
description = "Generate AI auditor system prompts from coding policy Excel files."
readme = "README_ja.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "jinja2>=3.1.0",
]

[project.scripts]
coding-policy-prompt-generator = "coding_policy_prompt_generator.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
coding_policy_prompt_generator = ["templates/*.j2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
